add system n-gram rules